# virtual_stain_flow

./: .gitignore  CHANGELOG.md  README.md  cp_gan_env.yml  pyproject.toml  setup.cfg
callbacks/: MlflowLogger.py  callbacks.py
datasets/: BaseImageDataset.py  CPLoadDataImageDataset.py  README.md  __init__.py  aug_dataset.py  base_dataset.py  bbox_dataset.py  bbox_schema.py  cp_loaddata_dataset.py  crop_cell_dataset.py  crop_generator.py  dataset_view.py  ram_cache_dataset.py  real_augments.py  run_aug.py
datasets/patching/: PatchCollection.py  PatchGenerator.py  __init__.py
evaluation/: visualization_utils.py
examples/: 0.download_data.py  1.modular_unet_example.ipynb  2.training_with_logging_example.ipynb  README.md  example_training.ipynb  modular_unet_example.ipynb  nbconvert.sh  prototype_logging.ipynb  training_with_logging_example.ipynb
examples/nbconverted/: 1.modular_unet_example.py  2.training_with_logging_example.py  minimal_example.py  minimal_example_generic_dataset.py  modular_unet_example.py  prototype_logging.py  training_modular_unet_example.py  training_with_logging_example.py
logging/: MlflowLogger.py
logging/callbacks/: LoggerCallback.py  PlotCallback.py
losses/: AbstractLoss.py  README.md  dynamic_weight.py  loss_item_group.py  wgan_losses.py
models/: base_model.py  blocks.py  discriminator.py  encoder.py  factory.py  handle_type_checking.py  unet.py  unext.py  up_down_blocks.py
src/virtual_stain_flow/callbacks/: callbacks.py
src/virtual_stain_flow/datasets/: README.md  __init__.py  base_dataset.py  bbox_dataset.py  bbox_schema.py  crop_dataset.py  image_utils.py  utils.py
src/virtual_stain_flow/datasets/ds_engine/: crop_manifest.py  manifest.py
src/virtual_stain_flow/engine/: context.py  forward_groups.py  loss_group.py  names.py
src/virtual_stain_flow/evaluation/: README.md  evaluation_utils.py  predict_utils.py
src/virtual_stain_flow/fp_ctx/: ctx.py  forward_groups.py
src/virtual_stain_flow/losses/: AbstractLoss.py  dynamic_weight.py  loss_item_group.py  neg_ms_ssim.py  wgan_losses.py
src/virtual_stain_flow/metrics/: AbstractMetrics.py  MetricsWrapper.py  PSNR.py  README.md  SSIM.py
src/virtual_stain_flow/models/: README.md  decoder.py  stages.py  unet.py  unext.py  up_down_blocks.py  utils.py
src/virtual_stain_flow/trainers/: AbstractTrainer.py  __init__.py  device_context_manager.py  logging_trainer.py
src/virtual_stain_flow/trainers/logging_trainers/: AbstractLoggingTrainer.py  LoggingGANTrainer.py
src/virtual_stain_flow/transforms/: __init__.py  a_wrapper.py  base_transform.py  normalizations.py  transform_utils.py
src/virtual_stain_flow/vsf_logging/: MlflowLogger.py  README.md  __init__.py
src/virtual_stain_flow/vsf_logging/callbacks/: PlotCallback.py
tests/datasets/: test_bbox_schema.py  test_image_utils.py
trainers/: AbstractTrainer.py  README.md  Trainer.py  __init__.py
trainers/logging_trainers/: AbstractLoggingTrainer.py  LoggingGANTrainer.py  LoggingTrainer.py  __init__.py
transforms/: README.md  __init__.py  base_transform.py  normalizations.py
