[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual_stain_flow"
version = "0.9.0"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26,<2.1",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "pillow",
  "opencv-python",
  "pyarrow",
  "typing-extensions",
  "albumentations",
  "optuna",
  "timm",
  "monai",
  "pytorch-lightning",
  "torchmetrics",
  "mlflow",
  "ipython",
  "jupyter",
  "notebook",
]

[project.optional-dependencies]
# CPU-only
cpu = [
  "torch==2.8.*",
  "torchvision==0.23.*",
  "torchaudio==2.8.*",
]

# GPU (CUDA chosen via --extra-index-url at install time)
gpu = [
  "torch==2.8.*",
  "torchvision==0.23.*",
  "torchaudio==2.8.*",
]

# Development tools
dev = [
  "pytest",
  "uv",
]