# pyproject.toml

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual_stain_flow"
version = "0.4.0"
description = "For developing virtual staining models"
requires-python = ">=3.9"
dependencies = [
  "pyarrow",
  "numpy",
  "pandas",
  "seaborn",
  "matplotlib",
  "scikit-learn",
  "opencv-python",
  "typing-extensions",
  "albumentations",
  "optuna",
  "timm",
  "monai",
  "pytorch-lightning",
  "torchmetrics",
  "mlflow",
  "ipython",
  "jupyter",
  "notebook",
  "tifffile",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov",
  "pre-commit>=3.5,<4",
  "ruff>=0.6,<0.7",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["virtual_stain_flow"]
